<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host_label">Server Host:</string>
    <string name="server_host_placeholder">10.0.2.2</string>
    <string name="server_port_label">Server Port:</string>
    <string name="server_port_placeholder">8080</string>
    <string name="username_label">Username:</string>
    <string name="username_placeholder">johndoe</string>
    <string name="password_label">Password:</string>
    <string name="password_placeholder">*****</string>
    <string name="first_name_label">First Name:</string>
    <string name="first_name_placeholder">John</string>
    <string name="last_name_label">Last Name:</string>
    <string name="last_name_placeholder">Doe</string>
    <string name="email_label">Email:</string>
    <string name="email_placeholder">johndoe@gmail.com</string>
    <string name="gender_label">Gender:</string>
    <string name="male_radio">Male</string>
    <string name="female_radio">Female</string>
    <string name="login_button">LOG IN</string>
    <string name="register_button">REGISTER</string>
    <string name="logout_button">LOG OUT</string>
    <string name="life_story_lines_label">Life Story Lines</string>
    <string name="life_story_lines_description">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines_label">Family Tree Lines</string>
    <string name="family_tree_lines_description">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines_label">Spouse Lines</string>
    <string name="spouse_lines_description">SHOW SPOUSE LINES</string>
    <string name="fathers_side_label">Father\'s Side</string>
    <string name="fathers_side_description">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mothers_side_label">Mother\'s Side</string>
    <string name="mothers_side_description">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events_label">Male Events</string>
    <string name="female_events_label">Female Events</string>
    <string name="gender_events_description">FILTER BY EVENTS BASED ON GENDER</string>
    <string name="logout_label">Logout</string>
    <string name="logout_description">RETURN TO LOGIN SCREEN</string>
    <string name="person_first_name_label">First Name</string>
    <string name="person_last_name_label">Last Name</string>
    <string name="person_gender_label">Gender</string>
    <string name="search_menu_item_label">Search</string>
    <string name="settings_menu_icon_label">SETTINGS</string>
    <string name="map_detail_bar_placeholder">Click on a marker to see event details</string>
    <string name="search_bar_placeholder">Enter person or event query here</string>
</resources>